--- a/Debug/makefile
+++ b/Debug/makefile
@@ -42,6 +42,11 @@ endif
 
 -include ../makefile.defs
 
+BUILD_ARTIFACT_NAME := STM32F7_HighSpeed_IEPE
+BUILD_ARTIFACT_EXTENSION := elf
+BUILD_ARTIFACT_PREFIX := 
+BUILD_ARTIFACT := $(BUILD_ARTIFACT_PREFIX)$(BUILD_ARTIFACT_NAME).$(BUILD_ARTIFACT_EXTENSION)
+
 # Add inputs and outputs from these tool invocations to the build variables 
 EXECUTABLES += \
 STM32F7_HighSpeed_IEPE.elf \
@@ -57,11 +62,14 @@ STM32F7_HighSpeed_IEPE.bin \
 
 
 # All Target
-all: STM32F7_HighSpeed_IEPE.elf secondary-outputs
+all: main-build
+
+# Main-build Target
+main-build: STM32F7_HighSpeed_IEPE.elf secondary-outputs
 
 # Tool invocations
-STM32F7_HighSpeed_IEPE.elf: $(OBJS) $(USER_OBJS) C:\Users\user\Downloads\QQQ\STM32F7_IEPEHighSpeeddevelopBranch\STM32F7_IEPEHighSpeed\STM32F767ZITX_FLASH.ld
-	arm-none-eabi-gcc -o "STM32F7_HighSpeed_IEPE.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m7 -T"C:\Users\user\Downloads\QQQ\STM32F7_IEPEHighSpeeddevelopBranch\STM32F7_IEPEHighSpeed\STM32F767ZITX_FLASH.ld" --specs=nosys.specs -Wl,-Map="STM32F7_HighSpeed_IEPE.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv5-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
+STM32F7_HighSpeed_IEPE.elf: $(OBJS) $(USER_OBJS) E:\Production\STM32F7\Vibration\STM32F7_IEPEHighSpeed\STM32F767ZITX_FLASH.ld
+	arm-none-eabi-gcc -o "STM32F7_HighSpeed_IEPE.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m7 -T"E:\Production\STM32F7\Vibration\STM32F7_IEPEHighSpeed\STM32F767ZITX_FLASH.ld" --specs=nosys.specs -Wl,-Map="STM32F7_HighSpeed_IEPE.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv5-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
 	@echo 'Finished building target: $@'
 	@echo ' '
 
@@ -87,7 +95,14 @@ clean:
 
 secondary-outputs: $(SIZE_OUTPUT) $(OBJDUMP_LIST) $(OBJCOPY_BIN)
 
-.PHONY: all clean dependents
+fail-specified-linker-script-missing:
+	@echo 'Error: Cannot find the specified linker script. Check the linker settings in the build configuration.'
+	@exit 2
+
+warn-no-linker-script-specified:
+	@echo 'Warning: No linker script specified. Check the linker settings in the build configuration.'
+
+.PHONY: all clean dependents fail-specified-linker-script-missing warn-no-linker-script-specified
 .SECONDARY:
 
 -include ../makefile.targets
